--- a/README.adoc
+++ b/README.adoc
@@ -1,5 +1,11 @@
 = Liquid Crystal Library for Arduino =
 
+== Instructions ==
+
+To use this library, link:https://github.com/coder543/LiquidCrystalShift/archive/master.zip[download it], and then extract the zip into your Arduino Libraries folder, which is located in your Documents folder, under the "Arduino" folder, and it is named "libraries". Restart the Arduino IDE, and you should be able to go to File -> Examples -> LiquidCrystalShift and start the HelloWorld demo.
+
+== About ==
+
 This library allows an Arduino board to control LiquidCrystal displays (LCDs) based on the Hitachi HD44780 (or a compatible) chipset, which is found on most text-based LCDs.
 
 For more information about this library please visit us at
